--- a/FrontEnd/src/Components/Footer/Footer.module.css
+++ b/FrontEnd/src/Components/Footer/Footer.module.css
@@ -6,3 +6,10 @@
     width: 100%;
     margin-bottom: -5px;
 }
+
+@media only screen and (max-height: 550px) {
+    .FooterImg {
+        content: url("../../Assets/Images/HF-Mixed.svg");
+        margin-bottom: -7px;
+    }
+}
