--- a/FrontEnd/src/Components/TextBox/TextBox.module.css
+++ b/FrontEnd/src/Components/TextBox/TextBox.module.css
@@ -1,24 +1,26 @@
 .Wrapper {
-    padding-block-start: 10px;
-    font-size: 0.5rem;
+    font-size: 80%;
+    padding-block: 0.25rem;
 }
 
 .Label {
-    font-weight: 600;
-    color: #828282;
+    padding-inline-start: 0.25rem;
+    font-weight: 500;
+    color: black;
 }
 
 .Container {
-    padding-block: 2.5px;
+    padding-block-start: 0.25rem;
 }
 
 .Input {
-    border: 1px solid #DED2D9;
+    display: flex;
+    border: 1px solid #4285F4;
     border-radius: 3px;
-    padding-block: 5px;
-    padding-inline-start: 3px;
+    padding-inline-start: 0.25rem;
+    padding-block: 0.3rem 0.15rem;
     width: 100%;
-    font-size: 0.5rem;
-    font-weight: 300;
-    color: #E0E0E0;
+    font-weight: 400;
+    background-color: #EDF5FF;
+    color: #004B89;
 }
