Regex Used for Form Validation - Some Functionality Left to be Fixed

--- a/FrontEnd/src/Sections/Inputs/Inputs.module.css
+++ b/FrontEnd/src/Sections/Inputs/Inputs.module.css
@@ -21,6 +21,7 @@
     text-transform: uppercase;
     text-align: center;
     font-weight: 700;
+    font-size: 1.25rem;
     letter-spacing: 1px;
     background-color: #0F9D58;
     color: white;
